# Rust_Projects

./: README.md
async_await/: Cargo.toml
async_await/src/: main.rs
basic_auth/: Cargo.toml
basic_auth/src/: main.rs
compress_files/: Cargo.toml
compress_files/src/: main.rs
decompress_files/: Cargo.toml
decompress_files/src/: main.rs
download_utube_cli/: Cargo.toml
download_utube_cli/src/: download.rs  error.rs  main.rs
extract_links/: Cargo.toml
extract_links/src/: main.rs
get_request/: Cargo.toml
get_request/src/: main.rs
git_automation/src/: main.rs
img_download/: Cargo.toml
img_download/src/: main.rs
intro_2_actix/: Cargo.toml
intro_2_actix/src/: add.rhai  main.rs  multiply.rhai
json_write/: Cargo.toml
json_write/src/: main.rs
make_api_calls/: Cargo.toml
make_api_calls/src/: main.rs
mongodb_connect/: Cargo.toml
mongodb_connect/src/: main.rs
pass_vault/: Cargo.toml
pass_vault/src/: logic.rs  main.rs
pastebin_clone/: Cargo.toml  async_test.sh  pastes.db
pastebin_clone/src/: main.rs
postgres_connect/: Cargo.toml
postgres_connect/src/: main.rs
postgres_ops/: Cargo.toml
postgres_ops/src/: main.rs
read_csv/: Cargo.toml
read_csv/src/: main.rs
read_json/: Cargo.toml
read_json/src/: main.rs
sqlite_connect/: Cargo.toml  sqlite.db
sqlite_connect/src/: main.rs
